# sf_chatbot

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  __main__.py  alembic.ini  pyproject.toml  test_db_connection.py
backend/alembic/: env.py
backend/alembic/versions/: 0c5fce15a381_update_todo_lists_remove_foreign_key.py  20260220_remove_is_completed_update_status.py  2a401bc16669_create_todo_lists_table.py  a1b2c3d4e5f6_add_performance_index.py  b2c3d4e5f6a7_create_todo_items.py  xxxx_add_desc_tags_status.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: main.py
backend/app/api/v1/endpoints/: items.py  lists.py
backend/app/core/: config.py
backend/app/db/: database.py  session.py
backend/app/models/: todo_item.py  todo_list.py
backend/app/schemas/: todo_item.py  todo_list.py
backend/app/services/: item_service.py  list_service.py
backend/tests/: conftest.py  test_auth.py  test_initialization.py  test_items.py  test_list_detail.py  test_registration.py
docs/: project-specification.mdx
frontend/: .env.example  components.json  package.json  tailwind.config.ts
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/dashboard/: dashboard-client.tsx  page.tsx
frontend/src/components/: app-shell.tsx  use-mobile.tsx
frontend/src/components/providers/: query-provider.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  (+6 more)
frontend/src/lib/: auth-client.ts  auth.ts
frontend/src/tests/: initialization.test.ts
(+38 files in other folders)
