[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.129.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic-settings>=2.13.0",
    "sqlmodel==0.0.31",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
